--- a/docs/random-beacon/upgrade-authorizations.adoc
+++ b/docs/random-beacon/upgrade-authorizations.adoc
@@ -152,68 +152,40 @@ A compromised Registry Keeper can approve arbitrary operator contracts. Because 
 
 ===== Panic Button
 
-A compromised Panic Button can disable all operator contracts
-and halt all network services.
-Recovery is impossible until Governance has rekeyed the Panic Button.
+A compromised Panic Button can disable all operator contracts and halt all network services. Recovery is impossible until Governance has rekeyed the Panic Button.
 
-This is inevitable due to the functionality of the Panic Button,
-but the impact could be mitigated
-by setting a cap on how many times the Panic Button can be invoked
-within a particular timeframe.
-However, such a cap would be overwhelmed
-by a mass approval of malicious contracts by the other roles.
+This is inevitable due to the functionality of the Panic Button, but the impact could be mitigated by setting a cap on how many times the Panic Button can be invoked within a particular timeframe. However, such a cap would be overwhelmed by a mass approval of malicious contracts by the other roles.
 
 ===== Operator Contract Upgrader
 
-A compromised Operator Contract Upgrader
-can activate arbitrary operator contracts
-within the strict constraints of the upgrade process.
-Without compromise of the Registry Keeper
-to approve new malicious operator contracts,
-it is unlikely that a compromised Operator Contract Upgrader alone
-would have significant impact on the network.
+A compromised Operator Contract Upgrader can activate arbitrary operator contracts within the strict constraints of the upgrade process. Without compromise of the Registry Keeper to approve new malicious operator contracts, it is unlikely that a compromised Operator Contract Upgrader alone would have significant impact on the network.
 
 ===== Authorizer
 
-If only the Authorizer of some staker is compromised,
-the attacker can authorize operator contracts
-that have been approved by the Registry Keeper,
-and that recognize the contract that staker stakes on.
+If only the Authorizer of some staker is compromised, the attacker can authorize operator contracts that have been approved by the Registry Keeper, and that recognize the contract that staker stakes on.
 
-This has a very limited negative impact
-unless the Registry Keeper has approved
+This has a very limited negative impact unless the Registry Keeper has approved
 a faulty or malicious operator contract.
 
 ==== Key combinations
 
 ===== Registry Keeper + Operator Contract Upgrader
 
-If a malicious operator contract can get globally approved,
-the impacted service contract can be completely subverted
-by deprecating all other operator contracts
-and returning malicious values.
-While already existing operations should finish normally,
-the service contract can be rendered effectively useless for new requests.
+If a malicious operator contract can get globally approved, the impacted service contract can be completely subverted by deprecating all other operator contracts and returning malicious values. While already existing operations should finish normally, the service contract can be rendered effectively useless for new requests.
 
 ===== Registry Keeper + Authorizer
 
-Approving and authorizing a malicious operator contract
-permits theft of staked funds.
+TODO: Is there anything to prevent this from happening? Can this be mitigated?
+Approving and authorizing a malicious operator contract permits theft of staked funds.
 
 === Limitations
 
-Each operator contract upgrade requires participation
-from both the _Registry Keeper_ and the _Operator Contract Upgrader_.
-This increases the exposure of these keys,
-leading to a higher risk of simultaneous compromise.
+Each operator contract upgrade requires participation from both the _Registry Keeper_ and the _Operator Contract Upgrader_. This increases the exposure of these keys, leading to a higher risk of simultaneous compromise.
 
 == Future Work
 
-Service contracts could have upgradeable components
-for performing various sub-tasks.
-These components could be upgraded
-with a process similar to that of operator contracts
-except without staker involvement.
+Service contracts could have upgradeable components for performing various sub-tasks.
+These components could be upgraded with a process similar to that of operator contracts except without staker involvement.
 
 === Keeps, factories and vendors
 
@@ -221,16 +193,11 @@ except without staker involvement.
 
 ===== Keep factories
 
-Keep factories are operator contracts
-that create keeps for customer applications.
+Keep factories are operator contracts that create keeps for customer applications.
 
-Like all operator contracts,
-each Keep factory recognizes one or more staking contracts
-for the purpose of determining operators' eligibility to join keeps.
+Like all operator contracts, each Keep factory recognizes one or more staking contracts for the purpose of determining operators' eligibility to join keeps.
 
-Each keep factory implements one or more keep interfaces.
-The factory records its interfaces
-and the addresses of the corresponding keep vendors.
+Each keep factory implements one or more keep interfaces. The factory records its interfaces and the addresses of the corresponding keep vendors.
 
 ===== Keeps
 
